# phab

./: .editorconfig  Cargo.toml  Makefile  license  readme.md
phab/: Cargo.toml  build.rs
phab-grpc/: Cargo.toml  build.rs
phab-grpc/proto/: app.proto  task.proto
phab-grpc/src/: lib.rs  task_service.rs
phab-lib/: Cargo.toml
phab-lib/src/: dto.rs  lib.rs  types.rs
phab-lib/src/client/: config.rs  mod.rs  phabricator.rs
phab-lib/src/metric/: status.rs
phab-lib/src/storage/: storage.rs  storage_fs.rs
phab/src/lib/: config.rs  dto.rs  lib.rs  types.rs
phab/src/lib/client/: phabricator.rs
phab/src/lib/metric/: status.rs
phab/src/lib/storage/: mod.rs  storage.rs  storage_fs.rs
phab/src/lib/utils/: macros.rs
src/lib/: lib.rs  types.rs
src/lib/client/: mod.rs  phabricator.rs
