[package]
name = "phab"
version = "0.0.3"
authors = ["Sendy Halim <sendyhalim93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
reqwest = { version = "0.10.4", features = ["json", "rustls-tls", "native-tls"] }
tokio = { version = "0.2", features = ["full"] }
clap = { version = "2.33" }
futures = { version = "0.3" }
failure = { version = "0.1.7" }

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "phab"
path = "src/bin/phab.rs"
