[package]
name = "phab-lib"
version = "0.0.1"
authors = ["Sendy Halim <sendyhalim93@gmail.com>"]
edition = "2018"
description = """\
  CLI utility client for phabricator (https://www.phacility.com/phabricator)
"""
readme = "../readme.md"
homepage = "https://github.com/sendyhalim/phab"
repository = "https://github.com/sendyhalim/phab"
keywords = ["phabricator", "developer-tools"]
categories = ["command-line-utilities"]
license-file = "../license"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.10.4", features = ["json", "rustls-tls", "native-tls"] }
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3" }
failure = { version = "0.1.7" }
log = { version = "0.4.8" }
fake = { version = "2.2", features = ["derive", "chrono"] }
rand = { version = "0.7" }
slugify = { version = "0.1.0" }
