[package]
name = "phab"
version = "0.2.1"
authors = ["Sendy Halim <sendyhalim93@gmail.com>"]
edition = "2018"
description = """\
  CLI utility client for phabricator (https://www.phacility.com/phabricator)
"""
readme = "../readme.md"
homepage = "https://github.com/sendyhalim/phab"
repository = "https://github.com/sendyhalim/phab"
keywords = ["cli", "phabricator", "developer-tools"]
categories = ["command-line-utilities"]
license-file = "../license"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33" }
env_logger = { version = "0.7.1" }
failure = { version = "0.1.7" }
phab-lib = { version = "0.1", path = "../phab-lib/" }
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
built = "0.4"

[[bin]]
name = "phab"
path = "src/bin/phab.rs"
