[package]
name = "phab"
authors = ["Sendy Halim <sendyhalim93@gmail.com>"]
version = "0.4.0"
edition = "2018"
description = """\
  CLI utility client for phabricator (https://www.phacility.com/phabricator)
"""
readme = "../readme.md"
homepage = "https://github.com/sendyhalim/phab"
repository = "https://github.com/sendyhalim/phab"
keywords = ["cli", "phabricator", "developer-tools"]
categories = ["command-line-utilities"]
license-file = "../license"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33" }
env_logger = { version = "0.7.1" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
phab-lib = { version = "0.3", path = "../phab-lib/" }
tokio = { version = "1.0", features = ["full"] }
config = { version = "0.13" }
deser-hjson = { version = "1.0" }

[build-dependencies]
built = "0.4"

[[bin]]
name = "phab"
path = "src/bin/phab.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"
